array.island.Island.scala.error
Erreur de compilation :
Island:11: error: value :: is not a member of Int
  island(num ::i)
             ^